<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.skoop.skoopmag.MainActivity">

        <RelativeLayout
            android:id="@+id/RR1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/smlogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/smlogo" />

            <TextView
                android:id="@+id/Sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/smlogo"
                android:layout_toRightOf="@id/smlogo"
                android:text="@string/app_name"
                android:textColor="#f4f4f4"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Sm"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/smlogo"
                android:layout_toRightOf="@id/smlogo"
                android:gravity="center"
                android:text="@string/tag"
                android:textColor="#f4f4f4"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/RR1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="#1e90a8" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="#f4f4f4"
            android:textSize="14sp" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="2dp"
            android:background="#1e90a8" />


        <TextView
            android:id="@+id/cu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/cu"
            android:textColor="#f4f4f4"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/RR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cu"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/whatsapp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/whatsapp" />

            <TextView
                android:id="@+id/whatsapp_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/whatsapp"
                android:layout_toRightOf="@id/whatsapp"
                android:gravity="center"
                android:text="@string/wa"
                android:textColor="#f4f4f4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/fb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/whatsapp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/fb1" />

            <TextView
                android:id="@+id/fb_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/whatsapp_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/fb"
                android:layout_toRightOf="@id/whatsapp"
                android:gravity="center"
                android:text="@string/fb"
                android:textColor="#f4f4f4"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/insta"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/fb"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/insta" />

            <TextView
                android:id="@+id/insta_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/fb_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/insta"
                android:layout_toRightOf="@id/whatsapp"
                android:gravity="center"
                android:text="@string/insta"
                android:textColor="#f4f4f4"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/twitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/insta"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/twitter" />

            <TextView
                android:id="@+id/twitter_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/insta_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/twitter"
                android:layout_toRightOf="@id/whatsapp"
                android:gravity="center"
                android:text="@string/twitter"
                android:textColor="#f4f4f4"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/RR2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="#1e90a8" />

        <TextView
            android:id="@+id/wfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/wfu"
            android:textColor="#f4f4f4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wfu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wfu"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/wfu_text"
            android:textColor="#f4f4f4"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wfu_text"
            android:layout_marginBottom="8dp"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/mail"
            android:textColor="#f4f4f4"
            android:textColorLink="#f4f4f4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:text="@string/website"
            android:textColor="#f4f4f4"
            android:textColorLink="#f4f4f4"
            android:textSize="18sp" />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/website"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="#1e90a8"
            android:contentDescription="@string/d" />

    </RelativeLayout>

</ScrollView>